--- a/game/index.html
+++ b/game/index.html
@@ -21,7 +21,7 @@
 
     <div class="controls">
       <div id="run-button-container">
-        <button id="run-button" class="ai-button">Démarrer</button>
+        <button id="run-button" class="ai-button">Start AI</button>
       </div>
     </div>
 
